Bugfix Android: flickering tiles on OpenGL canvas

BUG:424347